--- a/day-4-responsive-page/style.css
+++ b/day-4-responsive-page/style.css
@@ -13,6 +13,15 @@ header {
 
 }
 
+.logo-div {
+    width: 100%;
+    height: 3rem;
+    color: aliceblue;
+    margin-top: 1rem;
+    margin-left: 3rem;
+    display: none;
+}
+
 nav {
     width: 50%;
     height: 100%;
@@ -33,7 +42,7 @@ ul {
     height: 100%;
 
     li {
-        height: 100%;
+        /* height: 100%; */
         display: flex;
         align-items: center;
     }
@@ -288,4 +297,24 @@ footer {
     p {
         margin-top: 0.5rem;
     }
+}
+
+.toggle-button {
+    position: absolute;
+    top: 0.7rem;
+    right: 1rem;
+    display: none;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 30px;
+    height: 21px;
+
+}
+
+.toggle-button .bar {
+    height: 3px;
+    width: 100%;
+    background-color: white;
+    border-radius: 10px;
+
 }
